--- a/package.json
+++ b/package.json
@@ -6,7 +6,15 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 10",
+    "lint:fix": "eslint . --ext ts,tsx --fix",
+    "type-check": "tsc --noEmit",
+    "format": "prettier --write \"src/**/*.{ts,tsx,css,json}\"",
+    "format:check": "prettier --check \"src/**/*.{ts,tsx,css,json}\"",
+    "validate": "npm run type-check && npm run lint && npm run format:check",
+    "clean": "rm -rf dist node_modules/.vite",
+    "prepare": "npm run type-check"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.5",
