--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "prepare": "npm run type-check"
   },
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-progress": "^1.1.8",
