--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "format:check": "prettier --check \"src/**/*.{ts,tsx,css,json}\"",
     "validate": "npm run type-check && npm run lint && npm run format:check",
     "clean": "rm -rf dist node_modules/.vite",
-    "prepare": "npm run type-check"
+    "prepare": "npm run type-check",
+    "generate-challenge": "node scripts/generate-weekly-challenge.js"
   },
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.3.3",
