--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "chart.js": "^4.5.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "driver.js": "^1.4.0",
     "lucide-react": "^0.316.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.1",
