--- a/backend/package.json
+++ b/backend/package.json
@@ -1,58 +1,50 @@
 {
   "name": "medprompts-backend",
   "version": "1.0.0",
-  "description": "Backend REST API para MedPrompts com autenticação JWT e segurança enterprise",
+  "description": "Backend da plataforma MedPrompts - API REST com Node.js, Express e PostgreSQL",
   "main": "dist/server.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
-    "migrate": "node dist/config/migrations.js",
-    "backup": "node dist/services/backup.js"
+    "db:reset": "ts-node src/scripts/resetDatabase.ts",
+    "db:studio": "npx prisma studio"
   },
   "keywords": [
     "medprompts",
+    "medicina",
+    "educacao",
     "api",
-    "rest",
-    "jwt",
+    "nodejs",
+    "express",
     "postgresql"
   ],
-  "author": "Andressa Mendes",
+  "author": "MedPrompts Team",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "dotenv": "^16.3.1",
-    "pg": "^8.11.3",
-    "pg-hstore": "^2.3.4",
-    "sequelize": "^6.35.2",
-    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.2",
+    "express-rate-limit": "^7.4.1",
+    "express-validator": "^7.2.1",
+    "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
-    "express-rate-limit": "^7.1.5",
-    "express-validator": "^7.0.1",
-    "xss-clean": "^0.1.4",
-    "hpp": "^0.2.3",
-    "winston": "^3.11.0",
-    "winston-daily-rotate-file": "^4.7.1",
-    "crypto-js": "^4.2.0",
-    "node-cron": "^3.0.3",
-    "aws-sdk": "^2.1508.0",
-    "compression": "^1.7.4",
-    "cookie-parser": "^1.4.6"
+    "pg": "^8.13.1",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.5",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/node": "^20.10.6",
-    "@types/compression": "^1.7.5",
-    "@types/cookie-parser": "^1.4.6",
-    "@types/crypto-js": "^4.2.1",
+    "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/node": "^22.10.2",
+    "@types/pg": "^8.11.10",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.7.2"
   },
   "engines": {
     "node": ">=18.0.0",
