--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,9 @@
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "db:reset": "ts-node src/scripts/resetDatabase.ts",
     "db:studio": "npx prisma studio"
   },
