--- a/backend/package.json
+++ b/backend/package.json
@@ -1,61 +1,58 @@
 {
   "name": "medprompts-backend",
   "version": "1.0.0",
-  "description": "Backend da plataforma MedPrompts - API REST com Node.js, Express e PostgreSQL",
+  "description": "Backend da aplicação MedPrompts com API REST, autenticação JWT e testes com Jest.",
   "main": "dist/server.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "db:reset": "ts-node src/scripts/resetDatabase.ts",
-    "db:studio": "npx prisma studio"
+    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "test": "jest --runInBand",
+    "test:coverage": "jest --runInBand --coverage"
   },
-  "keywords": [
-    "medprompts",
-    "medicina",
-    "educacao",
-    "api",
-    "nodejs",
-    "express",
-    "postgresql"
-  ],
-  "author": "MedPrompts Team",
+  "author": "MedPrompts",
   "license": "MIT",
   "dependencies": {
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.2",
-    "express-rate-limit": "^7.4.1",
-    "express-validator": "^7.2.1",
-    "helmet": "^8.0.0",
+    "dotenv": "^16.4.0",
+    "express": "^4.19.0",
+    "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.13.1",
-    "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.5",
-    "winston": "^3.17.0"
+    "pg": "^8.12.0",
+    "reflect-metadata": "^0.1.14"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.0",
-    "@types/jest": "^30.0.0",
-    "@types/jsonwebtoken": "^9.0.7",
-    "@types/node": "^22.10.2",
-    "@types/pg": "^8.11.10",
-    "@types/supertest": "^6.0.3",
-    "jest": "^30.2.0",
-    "supertest": "^7.1.4",
-    "ts-jest": "^29.4.6",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/node": "^20.11.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.7.2"
+    "typescript": "^5.4.0"
   },
-  "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=9.0.0"
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "roots": [
+      "<rootDir>/src"
+    ],
+    "testMatch": [
+      "**/?(*.)+(spec|test).ts"
+    ],
+    "collectCoverageFrom": [
+      "src/**/*.ts",
+      "!src/server.ts",
+      "!src/config/**"
+    ],
+    "coverageDirectory": "coverage",
+    "coverageReporters": [
+      "text",
+      "lcov"
+    ]
   }
 }
