--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,59 +1,62 @@
-# Configuração do Servidor
+# Ambiente
 NODE_ENV=development
+
+# Servidor
 PORT=3001
-API_VERSION=v1
-
-# URL do Frontend (para CORS)
 FRONTEND_URL=http://localhost:5173
-ALLOWED_ORIGINS=http://localhost:5173,https://andressamendes.github.io
 
-# Banco de Dados PostgreSQL
+# JWT (GERAR CHAVES NOVAS COM: node -e "console.log(require('crypto').randomBytes(64).toString('hex'))")
+JWT_SECRET=TROCAR_POR_CHAVE_SEGURA_128_CARACTERES
+JWT_REFRESH_SECRET=TROCAR_POR_CHAVE_SEGURA_128_CARACTERES
+JWT_EXPIRES_IN=15m
+JWT_REFRESH_EXPIRES_IN=7d
+
+# Banco de Dados
 DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=medprompts
 DB_USER=postgres
-DB_PASSWORD=sua_senha_aqui
-DB_POOL_MAX=20
-DB_POOL_MIN=5
+DB_PASSWORD=TROCAR_PELA_SUA_SENHA
 
-# Autenticação JWT
-JWT_SECRET=sua_chave_secreta_jwt_muito_longa_e_complexa_aqui_min_32_caracteres
-JWT_EXPIRE=7d
-JWT_REFRESH_SECRET=sua_chave_secreta_refresh_token_diferente_da_principal
-JWT_REFRESH_EXPIRE=30d
+# Criptografia (GERAR COM: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))")
+ENCRYPTION_KEY=TROCAR_POR_CHAVE_HEX_64_CARACTERES
+ENCRYPTION_IV=TROCAR_POR_IV_HEX_32_CARACTERES
 
-# Criptografia AES-256
-ENCRYPTION_KEY=sua_chave_aes256_32_bytes_hexadecimal_aqui_64_caracteres
-ENCRYPTION_IV=sua_iv_16_bytes_hexadecimal_32_caracteres
+# Sessão (GERAR COM: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))")
+SESSION_SECRET=TROCAR_POR_CHAVE_SEGURA
+
+# CORS
+CORS_ORIGIN=http://localhost:5173,http://127.0.0.1:5173
 
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
 
-# AWS S3 para Backup (opcional no início)
-AWS_ACCESS_KEY_ID=sua_access_key_aws
-AWS_SECRET_ACCESS_KEY=sua_secret_key_aws
-AWS_REGION=us-east-1
-AWS_S3_BUCKET=medprompts-backups
-
 # Logging
 LOG_LEVEL=info
 LOG_FILE_PATH=logs/
 
-# Backup Automático
-BACKUP_ENABLED=true
-BACKUP_CRON_SCHEDULE=0 3 * * *
+# Backup
+BACKUP_ENABLED=false
+BACKUP_SCHEDULE=0 2 * * *
 BACKUP_RETENTION_DAYS=30
 
-# Segurança
-BCRYPT_ROUNDS=12
-SESSION_SECRET=sua_chave_secreta_session_aqui
+# AWS S3 (Opcional)
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_REGION=
+S3_BUCKET_NAME=
 
-# Email (para recuperação de senha - futuro)
-SMTP_HOST=smtp.gmail.com
+# Email (Opcional)
+SMTP_HOST=
 SMTP_PORT=587
-SMTP_USER=seu_email@gmail.com
-SMTP_PASS=sua_senha_app_gmail
+SMTP_SECURE=false
+SMTP_USER=
+SMTP_PASS=
+EMAIL_FROM=
 
-# Monitoramento (opcional)
-SENTRY_DSN=
+# Bcrypt
+BCRYPT_ROUNDS=12
+
+# Cache
+CACHE_TTL=3600
