fix: corrigir 4 bugs críticos - encriptação JWT, AuthContext, basename router e env frontend

--- a/.gitignore
+++ b/.gitignore
@@ -10,16 +10,20 @@ lerna-debug.log*
 node_modules
 dist
 dist-ssr
-*.local
+*. local
+
+# Variáveis de ambiente (NUNCA commitar)
+.env
+.env.local
+.env. *. local
 
 # Editor directories and files
 .vscode/*
-!.vscode/extensions.json
+! .vscode/extensions. json
 .idea
 .DS_Store
 *.suo
 *.ntvs*
-*.njsproj
+*. njsproj
 *.sln
-*.sw?
-
+*.sw? 
