--- a/backend/package.json
+++ b/backend/package.json
@@ -4,11 +4,12 @@
   "description": "Backend da aplicação MedPrompts com API REST, autenticação JWT e testes com Jest.",
   "main": "dist/server.js",
   "scripts": {
-    "build": "tsc",
+    "build":  "tsc",
     "start": "node dist/server.js",
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "dev": "ts-node-dev --respawn --transpile-only src/server. ts",
     "test": "jest --runInBand",
-    "test:coverage": "jest --runInBand --coverage"
+    "test:coverage": "jest --runInBand --coverage",
+    "seed:gamification":  "ts-node src/scripts/seedGamification.ts"
   },
   "author": "MedPrompts",
   "license": "MIT",
@@ -21,7 +22,7 @@
     "express-rate-limit": "^8.2.1",
     "express-validator": "^7.3.1",
     "helmet": "^7.0.0",
-    "jsonwebtoken": "^9.0.2",
+    "jsonwebtoken":  "^9.0.2",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
     "reflect-metadata": "^0.1.14",
@@ -31,18 +32,18 @@
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
     "@types/bcryptjs": "^2.4.2",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
+    "@types/cors":  "^2.8.17",
+    "@types/express":  "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/node": "^20.11.0",
+    "@types/node":  "^20.11.0",
     "@types/sequelize": "^4.28.20",
     "@types/supertest": "^6.0.3",
     "@types/winston": "^2.4.4",
-    "jest": "^29.7.0",
+    "jest":  "^29.7.0",
     "supertest": "^7.1.4",
-    "ts-jest": "^29.1.2",
-    "ts-node": "^10.9.2",
+    "ts-jest":  "^29.1.2",
+    "ts-node":  "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.0"
   }
