--- a/backend/package.json
+++ b/backend/package.json
@@ -3,26 +3,28 @@
   "version": "1.0.0",
   "description": "Backend da aplicação MedPrompts com API REST, autenticação JWT e testes com Jest.",
   "main": "dist/server.js",
-  "scripts": {
-    "build":  "tsc",
+  "scripts":  {
+    "build": "tsc",
     "start": "node dist/server.js",
     "dev": "ts-node-dev --respawn --transpile-only src/server. ts",
     "test": "jest --runInBand",
+    "test:watch": "jest --watch --runInBand",
     "test:coverage": "jest --runInBand --coverage",
-    "seed:gamification":  "ts-node src/scripts/seedGamification.ts"
+    "test:verbose":  "jest --runInBand --verbose",
+    "seed: gamification": "ts-node src/scripts/seedGamification.ts"
   },
   "author": "MedPrompts",
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
+    "cors":  "^2.8.5",
     "dotenv": "^16.4.0",
     "express": "^4.19.0",
     "express-rate-limit": "^8.2.1",
     "express-validator": "^7.3.1",
     "helmet": "^7.0.0",
-    "jsonwebtoken":  "^9.0.2",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
     "reflect-metadata": "^0.1.14",
