--- a/.gitignore
+++ b/.gitignore
@@ -7,23 +7,57 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies
 node_modules
+
+# Build outputs
 dist
 dist-ssr
-*. local
 
-# Variáveis de ambiente (NUNCA commitar)
+# Local files
+*.local
+
+# Environment variables (NEVER COMMIT)
 .env
 .env.local
-.env. *. local
+.env.development
+.env.development.local
+.env.test
+.env.test.local
+.env.production
+.env.production.local
 
 # Editor directories and files
 .vscode/*
-! .vscode/extensions. json
+!.vscode/extensions.json
 .idea
 .DS_Store
 *.suo
 *.ntvs*
-*. njsproj
+*.njsproj
 *.sln
-*.sw? 
+*.sw?
+
+# OS files
+Thumbs.db
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# IDE
+.idea/
+*.iml
+*.ipr
+*.iws
+.vscode/
+*.swp
+*.swo
+*~
+
+# Testing
+coverage/
+.nyc_output/
+
+# Temporary files
+tmp/
+temp/
