--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toast": "^1.2.15",
+    "@react-oauth/google": "^0.13.4",
     "axios": "^1.13.2",
     "chart.js": "^4.5.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "driver.js": "^1.4.0",
+    "gapi-script": "^1.2.0",
     "lucide-react": "^0.316.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.1",
