--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "Backend da aplicação MedPrompts com API REST, autenticação JWT e testes com Jest.",
   "main": "dist/server.js",
   "scripts": {
-    "build":  "tsc",
+    "build": "tsc",
     "start": "node dist/server.js",
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "test": "jest --runInBand",
@@ -18,7 +18,8 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
-    "cors":  "^2.8.5",
+    "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.0",
     "express": "^4.19.0",
     "express-rate-limit": "^8.2.1",
@@ -34,18 +35,19 @@
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
     "@types/bcryptjs": "^2.4.2",
-    "@types/cors":  "^2.8.17",
-    "@types/express":  "^4.17.21",
+    "@types/cors": "^2.8.17",
+    "@types/crypto-js": "^4.2.2",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.11.0",
     "@types/sequelize": "^4.28.20",
     "@types/supertest": "^6.0.3",
-    "@types/winston":  "^2.4.4",
+    "@types/winston": "^2.4.4",
     "jest": "^29.7.0",
     "supertest": "^7.1.4",
-    "ts-jest":  "^29.1.2",
-    "ts-node":  "^10.9.2",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.0"
   }
