--- a/src/.env.example
+++ b/src/.env.example
@@ -1,29 +1,14 @@
-# ============================================
-# CONFIGURAÇÃO DO FRONTEND - MedPrompts
-# ============================================
-
-# URL da API Backend
-# Em desenvolvimento (local): http://localhost:3001/api/v1
-# Em produção: https://seu-backend. com/api/v1
-VITE_API_URL=http://localhost:3001/api/v1
-
-# ============================================
-# NOTAS IMPORTANTES
-# ============================================
+# ========================================
+# VARIÁVEIS DE AMBIENTE - FRONTEND
+# ========================================
 # 
-# 1. DESENVOLVIMENTO LOCAL:
-#    - Certifique-se de que o backend está rodando em http://localhost:3001
-#    - Copie este arquivo para .env.local (não commitar . env.local)
-#    - Exemplo: cp .env.example .env.local
-#
-# 2. PRODUÇÃO:
-#    - Configure VITE_API_URL com a URL do seu backend em produção
-#    - Use variáveis de ambiente do seu host (Vercel, Netlify, etc)
-#    - NUNCA commite .env com dados reais
-#
-# 3. GITHUB PAGES:
-#    - Se deployar no GitHub Pages, o VITE_API_URL será definido 
-#      na configuração de CI/CD do repositório (GitHub Actions)
-#    - Adicione como Secret no repositório:  Settings → Secrets
-#
-# ============================================
+# Copie este arquivo para .env.local e ajuste os valores conforme necessário
+# O arquivo .env.local não é versionado no Git
+
+# URL da API do Backend
+# Desenvolvimento local: http://localhost:3001
+# Produção: https://seu-backend-em-producao.com
+VITE_API_URL=http://localhost:3001
+
+# Ambiente
+NODE_ENV=development
