security: FASE 3 - implementar autenticação JWT segura com bcrypt
MUDANÇAS CRÍTICAS DE SEGURANÇA:

1. AUTENTICAÇÃO ROBUSTA:
   - Substituído Base64 (reversível) por bcrypt para hashing de senhas
   - Implementado JWT com assinatura HS256 (HMAC SHA-256)
   - Adicionado refresh tokens com expiração (15min access, 7d refresh)
   - Tokens agora possuem payload assinado criptograficamente

2. RATE LIMITING & BRUTE FORCE PROTECTION:
   - Máximo 5 tentativas de login por conta
   - Bloqueio automático de conta por 15 minutos após tentativas excessivas
   - Contador de tentativas por usuário
   - Reset automático após login bem-sucedido

3. SISTEMA DE ROLES (RBAC):
   - Adicionado campo 'role' (USER, ADMIN, MODERATOR)
   - Preparação para controle de acesso baseado em roles (FASE 4)

4. MELHORIAS DE SEGURANÇA:
   - Tokens JWT com payload: userId, email, role, type
   - Validação de senha mínima 8 caracteres
   - Email verification flag (isEmailVerified)
   - Método refreshAccessToken() para renovar sessões
   - Invalidação de refresh token no logout

5. MIGRAÇÃO:
   - Backup do serviço antigo (auth.service.backup.ts)
   - Função migrateOldUsers() para transição
   - Mantida compatibilidade com código existente

OWASP MITIGATIONS:
- A02:2021 (Cryptographic Failures) - ✅ RESOLVIDO
- A07:2021 (Broken Authentication) - ✅ RESOLVIDO
- FASE 7 (Rate Limiting) - ✅ PARCIALMENTE IMPLEMENTADO

DEPENDÊNCIAS ADICIONADAS:
- bcryptjs + @types/bcryptjs
- jsonwebtoken + @types/jsonwebtoken

Build size: +83KB (acceptable security trade-off)

Refs: #security #authentication #jwt #bcrypt #fase3

--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
     "@radix-ui/react-toast": "^1.2.15",
     "@react-oauth/google": "^0.13.4",
     "axios": "^1.13.2",
+    "bcryptjs": "^3.0.3",
     "chart.js": "^4.5.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "driver.js": "^1.4.0",
     "gapi-script": "^1.2.0",
+    "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.316.0",
     "pathfinding": "^0.4.18",
     "react": "^18.2.0",
@@ -46,6 +48,8 @@
     "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.11.16",
     "@types/pathfinding": "^0.1.0",
     "@types/react": "^18.2.55",
