--- a/package.json
+++ b/package.json
@@ -66,9 +66,11 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.35",
+    "process": "^0.11.10",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.3.3",
+    "util": "^0.12.5",
     "vite": "^5.1.0",
     "vite-plugin-pwa": "^1.2.0"
   }
