refactor: simplificar Virtual Space para single player
- Remover completamente funcionalidades multiplayer (Colyseus, NetworkManager)

- Criar versão single player simplificada sem servidor externo

- Remover dependências: colyseus, express, cors, pathfinding

- Manter jogabilidade básica: movimento, cenas, interações locais

- Atualizar package.json e .env.example

- Corrigir erros TypeScript e imports

--- a/.env.example
+++ b/.env.example
@@ -1,89 +1,21 @@
-# 🔒 MedPrompts - Variáveis de Ambiente (EXEMPLO)
-# Copie este arquivo para .env e preencha com valores reais
+# Environment Variables for MedPrompts
+# Copy this file to .env and fill in the values
 
-# ==========================================
-# SEGURANÇA - JWT & CRIPTOGRAFIA
-# ==========================================
-
-# Secret para assinar tokens JWT (OBRIGATÓRIO)
-# Gere uma chave forte: openssl rand -base64 64
-VITE_JWT_SECRET=YOUR_SUPER_SECRET_KEY_HERE_CHANGE_ME_IN_PRODUCTION
-
-# Secret para assinar refresh tokens (OBRIGATÓRIO)
-VITE_JWT_REFRESH_SECRET=YOUR_REFRESH_TOKEN_SECRET_HERE_CHANGE_ME
-
-# Salt para bcrypt (rounds) - Padrão: 12
-VITE_BCRYPT_ROUNDS=12
-
-# Expiração do access token (padrão: 15 minutos)
-VITE_JWT_EXPIRES_IN=15m
-
-# Expiração do refresh token (padrão: 7 dias)
-VITE_JWT_REFRESH_EXPIRES_IN=7d
-
-# ==========================================
-# URLS EXTERNAS AUTORIZADAS
-# ==========================================
-
-# URLs de streams de música Lo-fi (separadas por vírgula)
-VITE_ALLOWED_MUSIC_STREAMS=https://stream.zeno.fm/f3wvbbqmdg8uv,https://stream.zeno.fm/0r0xa792kwzuv,https://stream.zeno.fm/f6vhq8qqtg8uv
-
-# URL do alarme do Pomodoro
-VITE_ALARM_SOUND_URL=https://actions.google.com/sounds/v1/alarms/alarm_clock.ogg
-
-# ==========================================
-# RATE LIMITING
-# ==========================================
-
-# Máximo de tentativas de login por minuto
-VITE_MAX_LOGIN_ATTEMPTS=5
-
-# Tempo de bloqueio após múltiplas tentativas (minutos)
-VITE_ACCOUNT_LOCKOUT_DURATION=15
-
-# ==========================================
-# SEGURANÇA DE CONTEÚDO (CSP)
-# ==========================================
-
-# Domínios permitidos para CSP (separados por espaço)
-VITE_CSP_DOMAINS=https://stream.zeno.fm https://actions.google.com
-
-# ==========================================
-# AMBIENTE
-# ==========================================
-
-# Ambiente de execução (development | production)
-VITE_NODE_ENV=development
-
-# URL base da aplicação
+# Frontend URL
 VITE_APP_URL=http://localhost:5173
 
-# ==========================================
-# BACKEND API (FUTURO)
-# ==========================================
+# Backend API URL
+VITE_API_URL=http://localhost:3000/api
 
-# URL da API backend (quando implementado)
-# VITE_API_URL=http://localhost:3000/api
+# Google OAuth
+VITE_GOOGLE_CLIENT_ID=your-google-client-id-here
 
-# ==========================================
-# MULTIPLAYER - COLYSEUS SERVER
-# ==========================================
+# Feature Flags
+VITE_ENABLE_ANALYTICS=false
+VITE_ENABLE_PWA=true
 
-# URL do servidor Colyseus (Virtual Space)
-# Development: ws://localhost:2567
-# Production (Render.com): wss://your-app-name.onrender.com
-VITE_COLYSEUS_URL=ws://localhost:2567
+# Game Settings (Virtual Space)
+VITE_GAME_DEBUG=false
 
-# ==========================================
-# NOTAS DE SEGURANÇA
-# ==========================================
-
-# ⚠️ IMPORTANTE:
-# 1. NUNCA commite o arquivo .env no Git
-# 2. Gere secrets fortes usando: openssl rand -base64 64
-# 3. Rotacione secrets regularmente em produção
-# 4. Use valores diferentes para dev/staging/prod
-# 5. Nunca exponha secrets no frontend (prefixo VITE_ expõe no build)
-#
-# Para secrets verdadeiramente sensíveis, use backend com variáveis
-# de ambiente do servidor (sem prefixo VITE_)
+# Development Settings
+VITE_DEV_MODE=true
